--- a/index.html
+++ b/index.html
@@ -6,15 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!-- Customize CSS -->
+    <link rel="stylesheet" href='assets/css/chuck.css'>
+    <!-- Skeleton CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" />
 
-    <title>Chuck Tell Me A Joke!</title>
+    <title>Chuck Norris Joke Generator</title>
 
 </head>
 
 <body>
     <div class="container">
-
+        <h2>Tell Me A Joke Chuck Norris!</h2>
+        <form>
+            <div>
+                <label for="number">Number of Jokes</label>
+                <input type="number" id="number">
+            </div>
+            <button class="get-jokes">Get Jokes</button>
+        </form>
+        <ul class="jokes"></ul>
     </div>
 
 
